--- a/app/index.html
+++ b/app/index.html
@@ -18,7 +18,7 @@
 
     <ul class="nav navbar-nav">
         <li class="dropdown">
-            <a href="#" class="dropdown-toggle" data-toggle="dropdown">Log Servers <b class="caret"></b></a>
+            <a href="#" class="dropdown-toggle" onclick="return false;" data-toggle="dropdown">Log Servers <b class="caret"></b></a>
             <ul class="dropdown-menu">
                 <li><a href="#logserver/google-pilot">Google Pilot</a></li>
                 <li><a href="#logserver/google-aviator">Google Aviator</a></li>
