Change title to 'Certificate Transparency Watch'

--- a/app/index.html
+++ b/app/index.html
@@ -2,7 +2,7 @@
 <html lang="en" ng-app="myApp">
 <head>
   <meta charset="utf-8">
-  <title>My AngularJS App</title>
+  <title>Certificate Transparency Watch</title>
   <link rel="stylesheet" href="css/app.css"/>
   <link rel="stylesheet" href="https://netdna.bootstrapcdn.com/bootstrap/3.0.0-wip/css/bootstrap.min.css">
   <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
@@ -13,7 +13,7 @@
 <body>
   <nav class="navbar navbar-default" role="navigation">
     <div class="navbar-header">
-        <a class="navbar-brand" href="#">ct-watch</a>
+        <a class="navbar-brand" href="#">Certificate Transparency Watch</a>
     </div>
 
     <ul class="nav navbar-nav">
