Add contact page

--- a/app/index.html
+++ b/app/index.html
@@ -27,6 +27,7 @@
     </ul>
 
     <ul class="nav navbar-nav navbar-right">
+        <li><a href="#contact">Contact</a></li>
         <li><a href="https://github.com/tomfitzhenry/ct-watch-www">Code</a></li>
     </ul>
   </nav>
