Add link to architecture

--- a/app/index.html
+++ b/app/index.html
@@ -28,6 +28,7 @@
 
     <ul class="nav navbar-nav navbar-right">
         <li><a href="#contact">Contact</a></li>
+	<li><a href="http://www.gliffy.com/go/publish/5409955">Architecture</a></li>
         <li><a href="https://github.com/certificate-transparency-watch">Code</a></li>
     </ul>
   </nav>
