--- a/app/index.html
+++ b/app/index.html
@@ -22,6 +22,7 @@
             <ul class="dropdown-menu">
                 <li><a href="#logserver/google-pilot">Google Pilot</a></li>
                 <li><a href="#logserver/google-aviator">Google Aviator</a></li>
+                <li><a href="#logserver/alpha.ctlogs.org">alpha.ctlogs.org</a></li>
             </ul>
         </li>
     </ul>
