Add 4 new logs!
From http://www.certificate-transparency.org/known-logs

ct.googleapis.com/rocketeer
Base64 Log ID: 7ku9t3XOYLrhQmkfq+GeZqMPfl+wctiDAMR7iXqo/cs=
Operator: Google
Started: 2014-09-01
HTTPS supported: yes
Maximum Merge Delay: 24 hours
Contact: google-ct-logs@googlegroups.com
Chrome inclusion status: Pending inclusion.

ct1.digicert-ct.com/log
Base64 Log ID: VhQGmi/XwuzT9eG9RLI+x0Z2ubyZEVzA75SYVdaJ0N0=
Operator: DigiCert
Submitted for inclusion in Chrome: 2014-09-30
HTTPS supported: yes
Maximum Merge Delay: 24 hours
Contact: ctops@digicert.com
Chrome inclusion status: Pending inclusion.

ct.izenpe.com
Base64 Log ID: dGG0oJz7PUHXUVlXWy52SaRFqNJ3CbDMVkpkgrfrQaM=
Operator: Izenpe
Submitted for inclusion in Chrome: 2014-11-10
HTTPS supported: yes
Maximum Merge Delay: 24 hours
Contact: atecnica@izenpe.net
Chrome inclusion status: Pending inclusion.

log.certly.io
Base64 Log ID: zbUXm3/BwEb+6jETaj+PAC5hgvr4iW/syLL1tatgSQA=
Operator: Certly
Submitted for inclusion in Chrome: 2014-12-14
HTTPS supported: yes
Maximum Merge Delay: 24 hours
Contact: ian@certly.io
Chrome inclusion status: Pending inclusion.

--- a/app/index.html
+++ b/app/index.html
@@ -22,7 +22,10 @@
             <ul class="dropdown-menu">
                 <li><a href="#logserver/google-pilot">Google Pilot</a></li>
                 <li><a href="#logserver/google-aviator">Google Aviator</a></li>
-                <li><a href="#logserver/alpha.ctlogs.org">alpha.ctlogs.org</a></li>
+                <li><a href="#logserver/ct.izenpe.com">ct.izenpe.com</a></li>
+                <li><a href="#logserver/ct1.digicert-ct.com">ct1.digitcert-ct.com/log</a></li>
+                <li><a href="#logserver/google-rocketeer">Google Rocketeer</a></li>
+                <li><a href="#logserver/log.certly.io">certly.io</a></li>
             </ul>
         </li>
     </ul>
