Add Symantec and Venafi to site

--- a/app/index.html
+++ b/app/index.html
@@ -26,6 +26,8 @@
                 <li><a href="#logserver/ct1.digicert-ct.com">ct1.digitcert-ct.com/log</a></li>
                 <li><a href="#logserver/google-rocketeer">Google Rocketeer</a></li>
                 <li><a href="#logserver/log.certly.io">certly.io</a></li>
+                <li><a href="#logserver/ct.ws.symantec.com">ct.ws.symantec.com</a></li>
+                <li><a href="#logserver/ctlog.api.venafi.com">ctlog.api.venafi.com</a></li>
             </ul>
         </li>
     </ul>
